--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
      <head>
-     <title>EL titulo de nuestro blog</title>
+     <title>Bienvenid@ a nuestro Hyperblog</title>
      <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body> 
